Fixed navbar rendering on iPhone

--- a/hornet.css
+++ b/hornet.css
@@ -159,7 +159,6 @@ img.panel {
 
 .nextbar {
   width: 100%;
-  height: 36px;
   background-color: #eeeeee; /* Old browsers */
   background-repeat: repeat-x; /* Repeat the gradient */
   background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
@@ -173,10 +172,12 @@ img.panel {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  overflow: auto;
 }
 .nextbar .nav {
   margin-bottom: 0;
 }
+
 .nextbar .nav > li > a {
   margin: 0;
   padding-top:    11px;
